# playlist4progress

./: .envrc  .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml
docs/: libraries.md
src/playlist4progress/: main.py
