[project]
name = "playlist4progress"
version = "1.0.0"
description = "Track your progress in a XSPF formatted playlist"
readme = "README.md"
authors = [
    { name = "Julian Kuners", email = "julian.kuners@gmail.com" }
]
license = "MIT"
license-files = ["LICENCSE"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "lxml>=5.3.1",
]

[project.scripts]
playlist4progress = "playlist4progress:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D", # pydocstyle
  "E501", # line-too-long
  "T201", # print
]
